@@ -461,9 +461,8 @@
 					$db =& p4a_db::singleton($object->data_field->getDSN());
 					$data =& $object->data;
 					$description_field = $object->getSourceDescriptionField();
-					$q = addslashes($_REQUEST['q']);
-					$like = $db->getLikeOperator();
-					$where = "{$description_field} {$like} '%{$q}%'";
+					$q = addslashes($_REQUEST['q']);					
+					$where = $db->getCaseInsensitiveLikeSQL($description_field, "%$q%");
 					$old_where = $data->getWhere();
 					if ($old_where) {
 						$where = "({$old_where}) AND ($where)";
